# arc-kit

./: .gitignore  .markdownlint-cli2.jsonc  CHANGELOG.md  CLAUDE.md  IMPLEMENTATION_PLAN_MISTRAL_VIBE.md  README.md  hatch_build_hook.py  install.sh  package-lock.json  package.json  pyproject.toml
.arckit/: state.json
.arckit/memory/: sessions.md
.arckit/templates/: pages-template.html  tech-architecture-template.md
.claude/: settings.json
.claude-plugin/: marketplace.json
.claude/commands/: create-test-repo.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: codex-plugin.yml  lint-markdown.yml  publish.yml  release.yml
.state/: wiki_queue.json
.venv-test/: pyvenv.cfg
arckit-at/.claude-plugin/: plugin.json
arckit-au-energy/.claude-plugin/: plugin.json
arckit-au/.claude-plugin/: plugin.json
arckit-au/commands/: au-ot-security.md  au-soci-cirmp.md
arckit-au/recipes/: au-federal.yaml
arckit-ca/.claude-plugin/: plugin.json
arckit-claude/: .mcp.json  CHANGELOG.md
arckit-claude/.claude-plugin/: plugin.json
arckit-claude/agents/: arckit-aws-research.md  arckit-azure-research.md  arckit-gcp-research.md
arckit-claude/commands/: pages.md  wardley.md  wardley.value-chain.md
arckit-claude/config/: doc-types.mjs
arckit-claude/hooks/: README.md  hooks.json  version-check.mjs
arckit-eu/.claude-plugin/: plugin.json
arckit-fr/.claude-plugin/: plugin.json
arckit-gemini/: gemini-extension.json
arckit-paperclip/: .gitignore  README.md  package-lock.json  package.json
arckit-paperclip/src/: manifest.ts
arckit-uae/.claude-plugin/: plugin.json
arckit-uk-finance/.claude-plugin/: plugin.json
arckit-uk-nhs/.claude-plugin/: plugin.json
arckit-us/.claude-plugin/: plugin.json
docs/: DEPENDENCY-MATRIX.md  PLATFORM-COMPARISON.md  README.md  RELEASING.md  TEST-REPOS.md  article-viewer.html  articles.html  commands.html  contributors.html  getting-started.html  guide-viewer.html  guides.html  index.html  llms.txt  roles.html  scaffold_plan.md  sitemap.xml  solution_design.md  use-cases.html
docs/articles/: 2026-02-28-arckit-contributors-medium-post.md  2026-02-28-arckit-v2163-linkedin-post.md  2026-03-08-v4-codex-gemini-support.md  (+49 more)
docs/guides/: datascout.md  (+15 more)
scripts/: build-config.example.yaml  bump-version.sh  convert_vibe_agents.py  convert_vibe_skills.py  converter.py  create-sdg-repo.py  generate-arckit-architecture-hero.py  generate-arckit-hero.py  push-extensions.sh  sync-claude-plugin-layout.py  tag-plugins.sh
ui/: README.md  docker-compose.yaml  nginx.conf
(+96 files in other folders)
